--- a/live-share-dice-roller/.vscode/tasks.json
+++ b/live-share-dice-roller/.vscode/tasks.json
@@ -60,7 +60,7 @@
         {
             "label": "Start frontend",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "npm start",
             "isBackground": true,
             "options": {
                 "cwd": "${workspaceFolder}"
