--- a/bot-sso/teamsapp.yml
+++ b/bot-sso/teamsapp.yml
@@ -66,11 +66,16 @@ deploy:
   - uses: cli/runNpmCommand
     with:
       args: run build --if-present
-  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
+  # Deploy your application to Azure App Service using the zip deploy feature.
+  # For additional details, please refer to https://aka.ms/zip-deploy-to-app-services.
+  - uses: azureAppService/zipDeploy
     with:
-      distributionPath: . # Deploy base folder
-      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
-      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
+      # Deploy base folder
+      artifactFolder: .
+      # Can be changed to any ignore file location, leave blank will ignore nothing
+      ignoreFile: ./.webappignore
+      # The resource id of the cloud resource to be deployed to
+      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}}
 
 publish:
   - uses: teamsApp/validateManifest # Validate using manifest schema
