--- a/hello-world-in-meeting/teamsapp.yml
+++ b/hello-world-in-meeting/teamsapp.yml
@@ -48,10 +48,13 @@ deploy:
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: run build --if-present
-  - uses: azureStorage/deploy # Deploy bits to Azure Storage Static Website
+  # Deploy bits to Azure Storage Static Website
+  - uses: azureStorage/deploy
     with:
-      distributionPath: ./build # Deploy base folder
-      resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
+      # Deploy base folder
+      artifactFolder: ./build
+      # The resource id of the cloud resource to be deployed to
+      resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
 
 publish:
   - uses: teamsApp/validateManifest # Validate using manifest schema
