--- a/stocks-update-notification-bot/teamsapp.yml
+++ b/stocks-update-notification-bot/teamsapp.yml
@@ -44,12 +44,14 @@ deploy:
   - uses: cli/runNpmCommand
     with:
       args: run build --if-present
-  - uses: azureFunctions/deploy
+  # Deploy your application to Azure Functions using the zip deploy feature.
+  # For additional details, please refer to https://aka.ms/zip-deploy-to-azure-functions
+  - uses: azureFunctions/zipDeploy
     with:
       # deploy base folder
-      distributionPath: ./
+      artifactFolder: ./
       # can be changed to any ignore file location, leave blank will ignore nothing
-      ignoreFile: ./.funcignore
+      ignoreFile: .funcignore
       # the resource id of the cloud resource to be deployed to
       resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
 
