--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -76,7 +76,7 @@ deploy:
   - uses: azureStorage/deploy
     with:
       # Deploy base folder. This folder includes manifest files for AAD app and Teams app that should be ignored using the ignoreFile.
-      artifactFolder: build
+      artifactFolder: ./build
       # The resource id of the cloud resource to be deployed to
       resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
   - uses: cli/runNpmCommand # Run npm command
